20260307-Paper1.21